force-app/main/default/objects/Transaction_Line_Item__c/Transaction_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Tracking the order line for a transaction order or the payment application for a transaction payment.</description>
    <label>Transaction Line Item</label>
    <nameField>
        <displayFormat>TRL-{00000}</displayFormat>
        <label>Transaction Line Item #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>