force-app/main/default/objects/Transaction_Line_Item__c/fields/Accounting_System_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Accounting_System_Record_Id__c</fullName>
    <description>Track the record id used in the external accounting system.</description>
    <inlineHelpText>Track the record id used in the external accounting system.</inlineHelpText>
    <label>Accounting System - Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>