force-app/main/default/objects/Transaction_Line_Item__c/fields/Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id__c</fullName>
    <formula>CASESAFEID(Transaction_Order__r.Contact__c)</formula>
    <label>Contact Id</label>
    <type>Text</type>
</CustomField>