force-app/main/default/objects/Transaction_Line_Item__c/fields/Credit__c.field-meta.xml
<CustomField>
    <fullName>Credit__c</fullName>
    <formula>IF(ISPICKVAL( Entry_Type__c, &apos;Credit&apos;),  Total_Amount__c , null)</formula>
    <label>Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>