force-app/main/default/objects/Transaction_Line_Item__c/fields/Debit__c.field-meta.xml
<CustomField>
    <fullName>Debit__c</fullName>
    <formula>IF(ISPICKVAL( Entry_Type__c, &apos;Debit&apos;),  Total_Amount__c , null)</formula>
    <label>Debit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>