force-app/main/default/objects/Transaction_Line_Item__c/fields/Individual_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Individual_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Individual Enrollment</label>
    <referenceTo>Individual_Enrollment__c</referenceTo>
    <relationshipLabel>Transaction Line Items</relationshipLabel>
    <relationshipName>Transaction_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>