force-app/main/default/objects/Transaction_Line_Item__c/fields/Individual_Funding_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Individual_Funding_Allocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Individual Funding Allocation</label>
    <referenceTo>Individual_Funding_Allocation__c</referenceTo>
    <relationshipLabel>Transaction Line Items</relationshipLabel>
    <relationshipName>Transaction_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>