force-app/main/default/objects/Transaction_Line_Item__c/fields/Offset_Amount__c.field-meta.xml
<CustomField>
    <fullName>Offset_Amount__c</fullName>
    <description>The paid amount rolled up from the related offset transaction line item.</description>
    <label>Offset Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>