force-app/main/default/objects/Transaction_Line_Item__c/fields/Offset_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Offset_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Payment or funding offset for the related transaction line item.</description>
    <inlineHelpText>Payment or funding offset for the related transaction line item.</inlineHelpText>
    <label>Offset Line Item</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Transaction_Order__c</field>
            <operation>equals</operation>
            <valueField>Transaction_Line_Item__c.Transaction_Order__c</valueField>
        </filterItems>
        <infoMessage>Please select a transaction line item that belongs to the same transaction order.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Transaction_Line_Item__c</referenceTo>
    <relationshipLabel>Transaction Line Items (Offset)</relationshipLabel>
    <relationshipName>Offset_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>