force-app/main/default/objects/Transaction_Line_Item__c/fields/Study_Fee_Matrix_Item__c.field-meta.xml
<CustomField>
    <fullName>Study_Fee_Matrix_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Fee Matrix Item</label>
    <referenceTo>Study_Fee_Matrix_Item__c</referenceTo>
    <relationshipLabel>Transaction Line Items</relationshipLabel>
    <relationshipName>Transaction_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>