force-app/main/default/objects/Transaction_Line_Item__c/fields/Study_Voucher_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Study_Voucher_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Indicates the transaction line for study vouchers.</inlineHelpText>
    <label>Study Voucher Transaction</label>
    <referenceTo>Study_Voucher_Transaction__c</referenceTo>
    <relationshipLabel>Transaction Line Items</relationshipLabel>
    <relationshipName>Transaction_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>