force-app/main/default/objects/Transaction_Line_Item__c/fields/Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Subtotal__c</fullName>
    <description>Quantity x Unit Price</description>
    <label>Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>