force-app/main/default/objects/Transaction_Line_Item__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <description>Subtotal - Discount</description>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>