force-app/main/default/objects/Transaction_Line_Item__c/fields/Transaction_Order__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction Order</label>
    <referenceTo>Transaction_Order__c</referenceTo>
    <relationshipLabel>Transaction Line Items</relationshipLabel>
    <relationshipName>Transaction_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>