force-app/main/default/objects/Transaction_Line_Item__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order Line</fullName>
            </value>
            <value>
                <fullName>Monetary Entry</fullName>
            </value>
            <value>
                <fullName>Discount Entry</fullName>
            </value>
            <value>
                <fullName>Non Transactional Entry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>