force-app/main/default/objects/Transaction_Line_Item__c/validationRules/Prevent_Deletion_With_Payment_Applied.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Deletion_With_Payment_Applied</fullName>
    <active>true</active>
    <description>This validation rule prevents the deletion of records when a payment has been applied to them.</description>
    <errorConditionFormula>AND(
    ISCHANGED( Total_Amount__c ) ,
    Offset_Amount__c != 0
)</errorConditionFormula>
    <errorDisplayField>Total_Amount__c</errorDisplayField>
    <errorMessage>You are not allowed to change the Quantity, Unit Price, or Discount if payment is applied.</errorMessage>
</ValidationRule>