force-app/main/default/objects/Transaction_Line_Item__c/validationRules/Required_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Contact</fullName>
    <active>false</active>
    <description>(Obsolete - Do not use) To ensure the contact is set.</description>
    <errorConditionFormula>ISBLANK( Contact__c )</errorConditionFormula>
    <errorDisplayField>Contact__c</errorDisplayField>
    <errorMessage>Please select a contact.</errorMessage>
</ValidationRule>