force-app/main/default/objects/Transaction_Line_Item__c/validationRules/Required_EntryType.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_EntryType</fullName>
    <active>true</active>
    <description>To ensure the entry type is set.</description>
    <errorConditionFormula>AND(
ISBLANK( TEXT(Entry_Type__c) ),
NOT(ISPICKVAL(Transaction_Type__c, &apos;Non Transactional Entry&apos;))
)</errorConditionFormula>
    <errorDisplayField>Entry_Type__c</errorDisplayField>
    <errorMessage>Please select an entry type.</errorMessage>
</ValidationRule>