force-app/main/default/objects/Transaction_Line_Item__c/validationRules/Required_ItemType.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_ItemType</fullName>
    <active>true</active>
    <description>To ensure the item type is set.</description>
    <errorConditionFormula>ISBLANK(TEXT( Item_Type__c )) &amp;&amp;  ISPICKVAL(Transaction_Type__c, &quot;Order Line&quot;)</errorConditionFormula>
    <errorDisplayField>Item_Type__c</errorDisplayField>
    <errorMessage>Please select an item type.</errorMessage>
</ValidationRule>