force-app/main/default/objects/Transaction_Line_Item__c/validationRules/Required_Quantity.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Quantity</fullName>
    <active>true</active>
    <description>To ensure the quantity is set.</description>
    <errorConditionFormula>AND(
ISBLANK( Quantity__c ),
NOT(ISPICKVAL(Transaction_Type__c, &apos;Non Transactional Entry&apos;))
)</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>Please enter the quantity.</errorMessage>
</ValidationRule>