force-app/main/default/objects/Transaction_Line_Item__c/validationRules/Required_UnitPrice.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_UnitPrice</fullName>
    <active>true</active>
    <description>To ensure the unit price is set.</description>
    <errorConditionFormula>AND(
ISBLANK(Unit_Price__c),
NOT(ISPICKVAL(Transaction_Type__c, &apos;Non Transactional Entry&apos;))
)</errorConditionFormula>
    <errorDisplayField>Unit_Price__c</errorDisplayField>
    <errorMessage>Please enter the unit price.</errorMessage>
</ValidationRule>